feat(gitignore): init express

--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/CandyDaniele/medicine-api/issues"
   },
-  "homepage": "https://github.com/CandyDaniele/medicine-api#readme"
+  "homepage": "https://github.com/CandyDaniele/medicine-api#readme",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
